# ASCII-video-converter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: gedanken.sh
include/: ascii_converter.hpp  config.hpp  frame_processor.hpp  renderer.hpp  video_exporter.hpp  video_processor.hpp
src/: ascii_converter.cpp  config.cpp  frame_processor.cpp  renderer.cpp  video_exporter.cpp  video_processor.cpp
